<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCROWN-Client-Node</string>
    <string name="action_settings">Settings</string>
	<string name="hint_server_name">Server name or IPv4 address</string>
	<string name="button_connect">Connect to Server</string>
	<string name="button_disconnect">Disconnect from Server</string>
	<string name="button_action_disconnect">disconnectFromServer</string>
	<string name="button_action_connect">connectToServer</string>
	<string name="msec">Message</string>
	<string name="accelerometer_title">Accelerometer Access</string>
</resources>