<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
        
    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Accelerometer Access" 
        android:textOn="Reject Accelerometer Access"
        android:textOff="Grant Accelerometer Access"
        android:onClick="grantAccessToAccel"/>

    <LinearLayout android:id="@+id/client_side"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="10sp" >
            
        <EditText android:id="@+id/edit_server_name"
            android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:lines="1"
			android:hint="@string/hint_server_name" 
			android:text="192.168.137.1">
        </EditText>
        
        <TextView android:id="@+id/server_name"
            android:visibility="gone"
            android:layout_width="wrap_content"
	        android:layout_height="wrap_content" 
	        android:textSize="20sp"
        	android:textStyle="bold" >
        </TextView>
        
        <Button android:id="@+id/button_connect"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_connect"
            android:onClick="@string/button_action_connect" >
        </Button>
        
        <Button android:id="@+id/button_disconnect"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:text="@string/button_disconnect"
            android:onClick="@string/button_action_disconnect" >
        </Button>
        
	</LinearLayout>
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_marginTop="10sp" >
        
        <TextView
            android:id="@+id/serverConnectStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" 
            android:visibility="gone"/>
	        
	</LinearLayout>

</LinearLayout>